# feature-translation-service

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: build.yml  pages.yml
docker/: README.md  build-docker-api.sh  build-docker-db.sh  ftsapi.Dockerfile  ftsdb.Dockerfile
docs/: _config.yml  _toc.yml  examples.md  huc.md  intro.md  overview.md  pagination.md  region.md  response.md  rivers.md  start.md
docs/tutorials/: huc-fts-visualize.ipynb  huc-fts.ipynb
docs/user-guide/: pagination.md  response.md
examples/HUC Examples/: get_all_regions.py  query_CMR_bounding_box.py  query_CMR_polygon.py  query_multiple_HUCs.py  query_multiple_regions.py  query_single_HUC.py  query_single_region.py
examples/Jupyter Notebooks/: HUC Feature Translation Service Examples.ipynb  SWOT Feature Translation Service Examples.ipynb  Visualize SWOT Response.ipynb
examples/SWOT Examples/: query_CMR_JSON.py  query_CMR_string.py  query_multiple_SWOT.py  query_single_SWOT.py
fts/api/controllers/: fts_controller.py
fts/db/huc/: DBuserData.sh  create_huc_dataset.py  download_data.py  remove_multipolygons.py  setup_databases.sh  simplify_huc.py
fts/db/huc/resources/: DBuserData.sh
fts/db/sword/: setup_sword.py  sword_convert_inf.py  sword_fargate.py
terraform/: .terraform.lock.hcl  README.md  feature-translation-service-api-lambda-iam.tf  feature-translation-service-api.tf  feature-translation-service-db-fargate-iam.tf  feature-translation-service-db-fargate.tf  feature-translation-service-db-iam.tf  feature-translation-service-db-lambda-iam.tf  feature-translation-service-db-lambda.tf  feature-translation-service-db.tf  main.tf  variables.tf
terraform/api_specification_templates/: fts_aws_api.yml
tests/: FTS.postman_collection.json  README.md  buildspec.yml  test_huc_lambda.py  test_rivers_lambda.py  test_setup_sword.py
tests/data/internal/SWORD/Reaches_Nodes_Test/shp/AF/: af_sword_nodes_hb11_v11.shp  af_sword_nodes_hb11_v11.shx  af_sword_reaches_hb11_v11.dbf  af_sword_reaches_hb11_v11.shx
