[tool.poetry]
name = "podaac-fts"
version = "1.3.0a0"
description = "The Feature Translation Service API and database for SWORD and HUC data."
authors = ["PO.DAAC <podaac@jpl.nasa.gov>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/podaac/fts"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
exclude = ['contrib', 'docs', 'tests']
packages = [
    { include = "fts"},
]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.36.12"
sqlalchemy = "^2.0.37"
pymysql = "^1.1.1"
geojson = "^3.2.0"
colorama = "^0.4.6"
geopandas = "^1.0.1"
pandas = "^2.2.3"
tqdm = "^4.67.1"
visvalingamwyatt = "^0.3.0"
fiona = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"
pylint = "^3.3.4"
sphinx = "^7.0.0"
numpy = "^2.2.2"
importlib-metadata = "^8.6.1"
recommonmark = "^0.7.1"
sphinx-markdown-tables = "^0.0.17"
sphinx-rtd-theme = "^3.0.2"
fiona = "^1.10.1"

[tool.poetry.group.api.dependencies]
boto3 = "^1.36.23"
geojson = "^3.2.0"
pymysql = "^1.1.1"

[tool.poetry.group.docs.dependencies]
jupyter-book = "^1.0.4.post1"
folium = "^0.19.5"
matplotlib = "^3.10.1"

[tool.poetry.scripts]
run_sword = 'fts.db.sword.setup_sword:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
